# django-crud-pix

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  local.env  pyproject.toml  pytest.ini
config/nginx/: pix_api.conf
pix-api/pix_api/: asgi.py  settings.py  urls.py  wsgi.py
pix_api/: gunicorn_config.py  manage.py
pix_api/apps/core/: admin.py  choices.py  factories.py  filters.py  models.py  routes.py  serializers.py  views.py
pix_api/apps/core/fixtures/: data.json
pix_api/apps/core/management/commands/: generate_data.py
pix_api/apps/core/migrations/: 0001_initial.py  0002_alter_receiver_unique_together.py
pix_api/composes/pix-api-dev/: docker-compose.yml
pix_api/pix_api/: asgi.py  docs.py  settings.py  urls.py  wsgi.py
pix_api/tests/core/: conftest.py  test_api.py  test_commands.py  test_models.py
pix_api/utils/: exceptions.py  random_attrs.py  re_patterns.py
