[tool.poetry]
name = "django-pix-api"
version = "0.1.0"
description = ""
authors = ["Gabriel da Costa"]
readme = "README.md"
packages = [{include = "django_pix_api"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
